codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_chart_changeset_conflict_160x40.snap
---
source: tui/src/workspace_dashboard.rs
expression: rendered
---
Medical Workspace  /workspace-medical  SYNTHETIC DATA ONLY
Patient: Jordan Patient  DOB: blank  MRN: blank  Contact: Missing contact  Coverage: Missing coverage  Encounter: No encounter
 EXPLORER                          PATIENT CHART                                                                   PLAN WITH CODEX
┌Patient Directory───────────────┐┌Patient Demographics──────────────────────────────────────────────────────────┐┌Plan with Codex─────────────────────────────┐
│Local search: /                 ││Identity: Jordan Patient · preferred not set                                  ││[Chat]  Context  Audit  ←/→ tabs            │
│1 active patient; local only    ││Legal/card: legal name missing                                                ││                                            │
│New: :patient new; / searches.  ││DOB: missing · admin sex: missing · MRN: missing                              ││Pending Chart Changeset                     │
│> Jordan Patient  DOB blank  MRN││Contact: phone missing; email missing; method not set                         ││  CONFLICT · note note-1 changed from r3 to │
│blank  active                   ││Address: address missing                                                      ││r4; refresh be...                           │
│                                ││Emergency: name missing; relationship missing; phone missing                  ││  Changes: encounter, note                  │
│                                ││Coverage: P not entered; S not entered; T not entered                         ││  Patient: identity only; demographics      │
│                                ││Enter edits all identity/contact fields · Ctrl-P opens actions                ││untouched                                   │
│                                │└──────────────────────────────────────────────────────────────────────────────┘│  Guards: 0 opaque version(s) · note r3     │
│                                │┌Note Title────────────────────────────────────────────────────────────────────┐│  Reason: Save reviewed chart changes:      │
└────────────────────────────────┘│Visit note                                                                    ││encounter, note                             │
┌Patient Notes───────────────────┐└──────────────────────────────────────────────────────────────────────────────┘│  Commit key: stable-conflict-key           │
│Patient Notes                   │┌Note Body─────────────────────────────────────────────────────────────────────┐│                                            │
│  Medical Notes                 ││Unsaved clinician draft.                                                      ││  ● Ctrl-S refreshes canonical data and     │
│> daily  1970-01-01  Visit note ││                                                                              ││preserves the draft                         │
│[unsaved] [draft]               ││                                                                              ││  Human draft stays in the center; canonical│
│                                ││                                                                              ││DB changes only after commit success.       │
│                                ││                                                                              ││                                            │
│                                ││                                                                              ││                                            │
│                                ││                                                                              ││                                            │
└────────────────────────────────┘│                                                                              ││                                            │
┌Uploaded Documents──────────────┐│                                                                              ││                                            │
│Uploaded Documents              ││                                                                              ││                                            │
│No files yet                    ││                                                                              ││                                            │
│Paste/drop JPG/PDF. Space...    ││                                                                              ││                                            │
│                                ││                                                                              ││                                            │
│                                ││                                                                              ││                                            │
│                                ││                                                                              ││                                            │
│                                ││                                                                              ││                                            │
│                                ││                                                                              ││Resolve Chart Conflict                      │
│                                ││                                                                              ││Ctrl-S refresh · Esc/Ctrl-W close           │
│                                ││                                                                              ││  Refresh canonical chart data before       │
│                                ││                                                                              ││  messaging Codex.                          │
│                                ││                                                                              ││                                            │
└────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────┘
Focus: Agent | Mode: Conflict recovery | Keys: Ctrl-S refresh  Esc/Ctrl-W close | Next: Refresh canonical chart
