codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_checkpoint_recovery_required_120x32.snap
---
source: tui/src/workspace_dashboard.rs
expression: "render_dashboard_lines_at(&dashboard, 120, 32)"
---
Medical Workspace
Patient: Jordan Patient  DOB: blank  MRN: blank  Contact: Missing contact  Coverage: Missing coverage  Encounter: No
 EXPLORER                      PATIENT CHART
┌Patient Directory───────────┐┌Patient Demographics────────────────────────────────────────────────────────────────────┐
│Local search: /             ││Display: Jordan Patient                                                                 │
│0 active patients; local    ││Preferred:                                                                              │
│only                        ││DOB:                                                                                    │
│No saved patients yet.      ││Sex/Gender:                                                                             │
│New patient: :patient new   ││Patient ID / MRN:                                                                       │
│                            ││Chart start: 2026-01-01                                                                 │
│                            ││Chart end: 2026-06-09                                                                   │
│                            │└────────────────────────────────────────────────────────────────────────────────────────┘
└────────────────────────────┘┌Note Title──────────────────────────────────────────────────────────────────────────────┐
┌Patient Notes───────────────┐│Visit note                                                                              │
│Patient Notes               │└────────────────────────────────────────────────────────────────────────────────────────┘
│  New note                  │┌Note Body───────────────────────────────────────────────────────────────────────────────┐
│  No patient notes yet. Use ││Fake human-entered visit note body.                                                     │
│:note new.                  ││                                                                                        │
│  Medical, communication,   ││                                                                                        │
│and admin notes appear here.││                                                                                        │
└────────────────────────────┘│                                                                                        │
┌Uploaded Documents──────────┐│                                                                                        │
│Uploaded Documents          ││                                                                                        │
│No files yet                │└────────────────────────────────────────────────────────────────────────────────────────┘
│Paste/drop JPG/PDF. S...    │┌Today's Visit───────────────────────────────────────────────────────────────────────────┐
│                            ││Patient: Jordan Patient; note: Visit note                                               │
│                            ││Next                                                                                    │
│                            ││  ● Next: Open encounter                                                                │
│                            ││                                                                                        │
│                            ││Intake Checklist                                                                        │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────────────────────────┘
Focus: Directory | Status: Canonical chart saved; local draft checkpoint outcome is unknown; automatic retry is blocked…
