codex-rs/tui/src/snapshots/codex_tui__workspace_dashboard__tests__medical_workspace_command_palette_100x28.snap
---
source: tui/src/workspace_dashboard.rs
expression: "render_dashboard_lines_at(&dashboard, width, height)"
---
Medical Workspace
Patient: Jordan Patient  DOB: blank  MRN: blank  Contact: Missing contact  Coverage: Missing
 EXPLORER                      PATIENT CHART
┌Patient Directory───────────┐┌Patient Demographics────────────────────────────────────────────────┐
│Local search: /             ││Display: Jordan Patient                                             │
│0 active patients; local    ││Preferred:                                                          │
│only     ┌Commands──────────────────────────────────────────────────────────────────────┐         │
│No saved │Search commands  :                                                            │         │
│New patie│Ctrl-P Commands anywhere  Enter run  Esc close  ↑/↓                           │         │
│         │                                                                              │         │
│         │Recommended now                                                               │         │
└─────────│> Search patients                                        :patient search [/]  │─────────┘
┌Patient N│Open patient list                                                :patients    │─────────┐
│Patient N│Open patient demographics                                    :demographics    │         │
│  Visit n│Common actions                                                                │─────────┘
│  Working│New note                                                     :note new [n]    │─────────┐
│saves it │Save chart workspace                                        :save [Ctrl-S]    │         │
└─────────│Agent bridge                                                                  │         │
┌Uploaded │Review Packet                                               :agent preview    │         │
│Uploaded │… 104 more                                                                    │─────────┘
│No files │                                                                              │─────────┐
│Paste/dro└──────────────────────────────────────────────────────────────────────────────┘         │
│                            ││Next                                                                │
│                            ││  ● Next: Save first eval                                           │
│                            ││                                                                    │
│                            ││Intake Checklist                                                    │
└────────────────────────────┘└────────────────────────────────────────────────────────────────────┘
Mode: Commands | Keys: ↑/↓ command  Enter run  Esc close | :
